# amundsen

./: LICENSE  README.md
current-rider/: README.md  pyproject.toml  step1-prompt-sim-a-scaffold.md  step2-prompt-ppo-baseline.md  step3-prompt-domain-randomization.md
current-rider/logs/monitor/: train.monitor.csv
current-rider/logs/monitor_randomised/: train.monitor.csv
current-rider/scripts/: create_animation.py  evaluate_baseline.py  evaluate_randomised.py  plot_learning_curve.py  test_random_actions.py  test_randomised_actions.py  test_sim_b_random.py  train_baseline.py  train_randomised.py  transfer_test.py
current-rider/src/current_rider/envs/: auv_complex.py  auv_simple.py
current-rider/src/current_rider/utils/: visualise.py
