[project]
name = "current-rider"
version = "0.1.0"
description = "2D AUV waypoint navigation — domain randomization sim-to-real demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "shimmy>=2.0",
    "stable-baselines3>=2.8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]